<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<packaging>pom</packaging>
	<groupId>io.github.nioertel.async</groupId>
	<artifactId>task-executors</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>11</java.version>
		<maven.compiler.source>${java.version}</maven.compiler.source>
		<maven.compiler.target>${java.version}</maven.compiler.target>
		<!-- 3rd party dependency version -->
		<assertj.version>3.24.2</assertj.version>
		<junit-jupiter.version>5.10.0</junit-jupiter.version>
		<slf4j.version>2.0.9</slf4j.version>
		<springframework.version>5.3.30</springframework.version>
		<!-- plugin versions -->
		<maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
		<maven-surefire-plugin.version>3.2.1</maven-surefire-plugin.version>
	</properties>

	<modules>
		<module>task-executors-core</module>
		<module>task-executors-test-helper</module>
	</modules>

	<dependencyManagement>
		
	<dependencies>
		<dependency>
			<groupId>io.github.nioertel.async</groupId>
			<artifactId>task-executors-core</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>io.github.nioertel.async</groupId>
			<artifactId>task-executors-spring5</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>io.github.nioertel.async</groupId>
			<artifactId>task-executors-test-helper</artifactId>
			<version>${project.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-beans</artifactId>
			<version>${springframework.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context</artifactId>
			<version>${springframework.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-core</artifactId>
			<version>${springframework.version}</version>
		</dependency>

		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>${junit-jupiter.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.assertj</groupId>
			<artifactId>assertj-core</artifactId>
			<version>${assertj.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-simple</artifactId>
			<version>${slf4j.version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	</dependencyManagement>
	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>${maven-compiler-plugin.version}</version>
					<configuration>
						<source>${maven.compiler.source}</source>
						<target>${maven.compiler.target}</target>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>${maven-surefire-plugin.version}</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

</project>
